--- a/css/block/intro.css
+++ b/css/block/intro.css
@@ -2,7 +2,7 @@
   position: absolute;
   top:0;
   left:0;
-  background: url('/img/intro/intro_background.jpg') no-repeat;
+  background: url('../../img/intro/intro_background.jpg') no-repeat;
   background-size: cover;
   height: 100%;
   width: 100%;
