--- a/css/intro-style.css
+++ b/css/intro-style.css
@@ -2,5 +2,5 @@
 @import url('addition/fonts.css');
 @import url('addition/base.css');
 
-@import url('css/block/intro.css');
+@import url('block/intro.css');
 
