--- a/css/block/intro.css
+++ b/css/block/intro.css
@@ -72,7 +72,7 @@
   display: block;
   width: 15px;
   height: 14px;
-  background: url('/img/icon/sprite.png');
+  background: url('../../img/icon/sprite.png');
   background-position: -5px -146px;
   margin-left: 10px;
 }
